--- a/Notes/index.html
+++ b/Notes/index.html
@@ -1,11 +1,20 @@
 <head>
     <title>Notes | Autosave on</title>
     <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
+    <link rel="stylesheet" href="./notes.css" />
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
 </head>
 
 <body>
-    <center>
+    <!-- <center>
         <py-script> print('NOTES')</py-script>
-    </center>
+    </center> -->
+    <div id="sidebar">
+        
+    </div>
+    <div id = "notes">
+        <textarea id="fnotes" name="w3review" rows="24" cols="50">
+            Your notes goes here
+        </textarea>
+    </div>
 </body>
