add export notes

--- a/Notes/index.html
+++ b/Notes/index.html
@@ -5,16 +5,30 @@
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
 </head>
 
-<body>
-    <!-- <center>
-        <py-script> print('NOTES')</py-script>
-    </center> -->
+<body>  
     <div id="sidebar">
         
     </div>
-    <div id = "notes">
+    <div id="notes">
         <textarea id="fnotes" name="w3review" rows="24" cols="50">
             Your notes goes here
         </textarea>
     </div>
+    <div id="export">
+        <button id="submit-button" type="submit" pys-onClick="export_notes">EXPORT</button>
+    </div>
+    <div id="test-output"></div>
+<py-script>
+from js import console
+import sys
+def export_notes(*args, **kwargs):
+    console.log(f'args: {args}')
+    console.log(f'kwargs: {kwargs}')
+    text = Element('fnotes').element.value
+    console.log(f'text: {text}')
+    Element('test-output').element.innerText = text
+    sys.stdout = open('file', 'w')
+    print('test')
+    sys.stdout.close()
+</py-script>
 </body>
