update main page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - CSS Filter Cards</title>
+  <title>Study Zone</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,7 @@
         <h3 class="card__heading">SEARCH</h3>
       </div>
     </a>
-    <a class="card" href="#">
+    <a class="card" href="pomodoro/index.html">
       <div class="card__background" style="background-image: url(https://t3.ftcdn.net/jpg/03/92/84/62/360_F_392846240_EtnG0eXfiHFgRnxRddmw7pKJsHFGrQDw.jpg)"></div>
       <div class="card__content">
         <!-- <p class="card__category">Category</p> -->
@@ -41,7 +41,7 @@
         <h3 class="card__heading">CHILL BEATS</h3>
       </div>
     </li>
-    <a class="card" href="#">
+    <a class="card" href="Notes/index.html">
       <div class="card__background" style="background-image: url(https://img.freepik.com/free-vector/take-note-diary-flat-design-illustration_183665-103.jpg)"></div>
       <div class="card__content">
         <!-- <p class="card__category">Category</p> -->
