--- a/chillBeats/index.html
+++ b/chillBeats/index.html
@@ -21,6 +21,7 @@
     <title>Document</title>
   </head>
   <body>
+   <div class="bg"></div>
     <button onclick="getASong()">Play</button>
 
     <div class="row padding">
